--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="col-md-3">
           <div class="service-box" >
             <div class="service-ico">
-              <span class="ico-circle"><img src="img/BB5.png" style="width:50px;height:50px;"></span>
+              <span class="ico-circle"><img src="img/bb5.png" style="width:50px;height:50px;"></span>
             </div>
             <div class="service-content">
               <h2 class="s-title">Digital Stamps</h2>
@@ -125,7 +125,7 @@
         <div class="col-md-3">
           <div class="service-box" style="widows: 80px;height:300px;">
             <div class="service-ico">
-              <span class="ico-circle"><img src="img/BB4.png" style="width:50px;height:50px;"></span>
+              <span class="ico-circle"><img src="img/bb4.png" style="width:50px;height:50px;"></span>
             </div>
             <div class="service-content">
               <h2 class="s-title">Visiting Cards</h2>
@@ -169,9 +169,9 @@
       <div class="row">
         <div class="col-md-4 ">
           <div class="work-box">
-            <a href="img/aa.JPG" data-lightbox="gallery-mf" style="width:350px; height:400px;">
+            <a href="img/aa.jpg" data-lightbox="gallery-mf" style="width:350px; height:400px;">
               <div class="work-img">
-                <img src="img/aa.JPG" alt="" class="img-fluid">
+                <img src="img/aa.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
@@ -193,9 +193,9 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/aa1.JPG" data-lightbox="gallery-mf" style="width:350px; height:400px;">
+            <a href="img/aa1.jpg" data-lightbox="gallery-mf" style="width:350px; height:400px;">
               <div class="work-img">
-                <img src="img/aa1.JPG" alt="" class="img-fluid">
+                <img src="img/aa1.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
@@ -217,9 +217,9 @@
         </div>
         <div class="col-md-4 ">
           <div class="work-box">
-            <a href="img/aa2.JPG" data-lightbox="gallery-mf">
+            <a href="img/aa2.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/aa2.JPG" alt="" class="img-fluid">
+                <img src="img/aa2.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
@@ -241,9 +241,9 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/aa3.JPG" data-lightbox="gallery-mf">
+            <a href="img/aa3.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/aa3.JPG" alt="" class="img-fluid">
+                <img src="img/aa3.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
