change image extension capital

--- a/index.html
+++ b/index.html
@@ -265,9 +265,9 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/aa4.JPG" data-lightbox="gallery-mf">
+            <a href="img/aa4.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/aa4.JPG" alt="" class="img-fluid">
+                <img src="img/aa4.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
@@ -289,9 +289,9 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/aa5.JPG" data-lightbox="gallery-mf">
+            <a href="img/aa5.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/aa5.JPG" alt="" class="img-fluid">
+                <img src="img/aa5.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
